[tool.poetry]
name = "mongo-queue"
version = "0.1.0"
description = ""
authors = ["Marc <marc@synapse-medicine.com>"]

[tool.poetry.dependencies]
python = "3.10"
motor = "^3.0.0"
pydantic = "^1.10.2"
loguru = "^0.6.0"
dill = "^0.3.5"
schedule = "^1.1.0"
async-timeout = "^4.0.2"
cloudpickle = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
