[tool.poetry]
name = "mongo-queue"
version = "0.1.0"
description = ""
authors = ["Marc <marc@synapse-medicine.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
motor = "^3.1.1"
pydantic = "^1.10.2"
loguru = "^0.6.0"
dill = "^0.3.5"
schedule = "^1.1.0"
async-timeout = "^4.0.2"
tenacity = "^8.1.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
aiohttp = "^3.8.3"
mkdocs-material = "^8.5.7"
ruff = "^0.0.135"
isort = "^5.10.1"
mkdocs-material = "^8.5.10"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F"]

# Never enforce `E501`.
ignore = ["E501"]